sort.pancake.GatesPancake.scala.error
Erreur de compilation :
GatesPancake:39: error: not found: value tp
  for (i <- tp getTaillePile()-1){
            ^GatesPancake:39: error: value - is not a member of Unit
  for (i <- tp getTaillePile()-1){
                              ^GatesPancake:91: error: method casG is defined twice
  conflicting symbols both originated in file 'plm.runtime96.GatesPancake'
def casG():Boolean{
    ^GatesPancake:75: error: method casE is defined twice
  conflicting symbols both originated in file 'plm.runtime96.GatesPancake'
def casE():Boolean{
    ^